- updated to expected sbt syntax and gitlab config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,14 +6,17 @@ stages:
 before_script:
   - apt-get update -y
   - apt-get install apt-transport-https -y
-  ## Install SBT
   - echo "deb http://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
   - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 642AC823
   - apt-get update -y
   - apt-get install sbt -y
-  - sbt sbt-version
+  - sbt sbtVersion
 
-test:
+job1:
   stage: test
   script:
     - sbt tests/test
+  only:
+    - master
+  tags:
+    - dockered
