- removed coverage stuff as that is not available for Scala 2.13.0-RC2
Signed-off-by: Max Leuthäuser <max.leuthaeuser@itemis.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ install:
 branches:
   only:
     - 2.13.0-RC2
-    # - master
 
 # Use container-based infrastructure
 sudo: false
@@ -29,9 +28,4 @@ before_cache:
   - find $HOME/.sbt        -name "*.lock"               -print -delete
 
 script:
-  - sbt clean coverage test
-
-after_success:
-  - sbt coverageReport
-  - sbt coverageAggregate
-  - sbt codacyCoverage
+  - sbt clean test
