- re-organized tests:    * each test can be run in isolation now: use e.g., 'sbt "testOnly **.CompartmentRoleFeaturesTest"'. This will run the cached and non-cached version of the test.    * to run all test use the provided Suite: e.g., 'sbt "testOnly **.SCROLLTestSuite"'. This will run all cached and non-cached tests.  - adapted build.sbt and .travis.yml for the above change
Signed-off-by: Max Leuthäuser <max.leuthaeuser@itemis.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ before_cache:
   - find $HOME/.sbt        -name "*.lock"               -print -delete
 
 script:
-  - sbt clean test
+  - sbt clean "testOnly **.SCROLLTestSuite"
