- removed unneeded shouldNot assertion
Signed-off-by: Max Leuthäuser <max.leuthaeuser@itemis.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_cache:
   - find $HOME/.sbt        -name "*.lock"               -print -delete
 
 script:
-  - sbt clean coverage test
+  - sbt clean coverage "testOnly **.SCROLLTestSuite"
 
 after_success:
   - sbt coverageReport
