--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -2,39 +2,42 @@ name: Scala CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
+
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-    - name: Run tests
-      run: sbt clean coverage test
-      
-  coverage:  
-   runs-on: ubuntu-latest
-   needs: build
-   steps:
-   - uses: actions/checkout@v2
-   - name: Set up JDK 11
-     uses: actions/setup-java@v2
-     with:
-       java-version: '11'
-       distribution: 'adopt'
-   - name: Generate Report
-     run: |
-        sbt coverageReport
-        sbt coverageAggregate
-   - name: Codacy Coverage Reporter
-     uses: codacy/codacy-coverage-reporter-action@master
-     with:
-       project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-       coverage-reports: cobertura.xml
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: adopt
+      - name: Run tests
+        run: sbt clean coverage test
+        
+  coverage:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: adopt
+      - name: Generate Report
+        run: |
+          sbt coverageReport
+          sbt coverageAggregate
+      - name: Codacy Coverage Reporter
+        uses: codacy/codacy-coverage-reporter-action@master
+        with:
+          project-token: '${{ secrets.CODACY_PROJECT_TOKEN }}'
+          coverage-reports: cobertura.xml
