--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -12,19 +12,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: adopt
-      - name: Run tests
-        run: sbt clean coverage test
-        
-  coverage:
-    runs-on: ubuntu-latest
-    needs: build
     env:
       CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
     steps:
@@ -34,5 +21,10 @@ jobs:
         with:
           java-version: '11'
           distribution: adopt
+      - name: Run tests
+        run: sbt clean coverage test
       - name: Run report
-        run: sbt coverageReport coverageAggregate codacyCoverage
+        run: |
+          sbt coverageAggregate
+          sbt codacyCoverage
+          
