--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,7 @@
 version			= 2.7.5
 runner.dialect	= dotty
-preset 			= defaultWithAlign
-maxColumn		= 120
+preset 			= IntelliJ
+maxColumn		= 100
 
 // TODO: remove this as soon dotty is fully supported by scalafmt
 project.excludeFilters = [
@@ -25,19 +25,7 @@ danglingParentheses {
   preset = true
 }
 
-align {
-  preset = most
-
-  tokens {
-    add = [":", ":=", "+=", "++="]
-  }
-
-  openParenDefnSite        = false
-  openParenCallSite        = false
-  stripMargin              = true
-  arrowEnumeratorGenerator = true
-  multiline                = true
-}
+align.preset = more
 
 continuationIndent {
   callSite                  = 2
