--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -3,14 +3,16 @@ name: Scala CI
 on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  test-scroll:
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: adopt
-      - name: Run tests
-        run: sbt test          
+      - name: apt-get update
+        run: sudo apt-get update
+      - name: Set up openjdk 1.8
+        run: sudo apt-get install openjdk-8-jdk
+      - name: Print sbt version
+        run: sbt --version
+      - name: Compile and run tests
+        run: sbt clean compile test
+        
