Updated dependencies; applied formatting

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "3.0.0-RC1"
+version = "3.0.0-RC7"
 runner.dialect = scala3
 preset = IntelliJ
 maxColumn	= 100
@@ -18,8 +18,9 @@ continuationIndent {
 }
 
 newlines {
-  alwaysBeforeTopLevelStatements = true
-  alwaysBeforeMultilineDef = true
+  topLevelStatementBlankLines = [
+    { blanks = 1 }
+  ]
 }
 
 spaces {
