--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -5,27 +5,22 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019, macos-10.15, macos-11]
+        os: [ubuntu-22.04, windows-2022, macos-12]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - name: Set up JDK 8 and SBT
-        uses: olafurpg/setup-scala@v11
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
         with:
-          java-version: adopt@1.8
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.sbt
-            ~/.coursier
-          key: ${{ runner.os }}-sbt-${{ hashfiles('**/build.sbt') }}
+          distribution: 'temurin'
+          java-version: '8'
+          cache: 'sbt'
       - name: Compile and run tests
-        run: sbt -v -Dfile.encoding=UTF-8 "clean; +test;"
-        shell: bash
+        run: sbt "clean; test;"
       - name: Compile Jmh benchmarks
-        run: sbt -v -Dfile.encoding=UTF-8 "clean; benchmark/Jmh/compile;"
+        run: sbt "clean; benchmark/Jmh/compile;"
       - name: Check formatting
-        run: sbt -v -Dfile.encoding=UTF-8 "scalafmtCheckAll; scalafmtSbtCheck;"
+        run: sbt "scalafmtCheckAll; scalafmtSbtCheck;"
       - run: echo "Previous step failed because code is not formatted. Run 'sbt format'"
         if: ${{ failure() }}
