--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,5 +1,5 @@
-name: Scala CI
-on: [push, pull_request]
+name: pr
+on: pull_request
 jobs:
   test-scroll:
     runs-on: ${{ matrix.os }}
@@ -10,11 +10,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - name: Set up JDK 8
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: '11'
           cache: 'sbt'
       - name: Compile and run tests
         run: sbt "clean; test;"
