--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,9 +16,8 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
           cache: 'sbt'
-      - name: Install sbt
-        if: matrix.os == 'macos-latest'
-        run: brew install sbt
+      - name: Set up SBT
+        uses: sbt/setup-sbt@v1
       - name: Compile and run tests
         run: sbt "clean; test;"
       - name: Compile Jmh benchmarks
